# Thesis-search-SKILL

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  MANIFEST.in  OPENCLAW.md  README.md  SKILL.md  pyproject.toml  requirements.txt  论文精读Skill设计方案.md
.agents/skills/thesis-reading-skill/: SKILL.md
.claude/skills/thesis-reading-skill/: SKILL.md
.github/skills/thesis-reading-skill/: SKILL.md
references/: analysis-template.md  audit-rules.md  citation-style.md  figure-table-policy.md  paper-reading-template.md  paperwise-notes.md  report-template.md  search-strategy.md  workflow.md
scripts/: __init__.py  analyze_paper.py  audit_report.py  build_library.py  build_report.py  capture_figures.py  cite.py  cli.py  deep_read_request.py  deep_read_selected.py  export_pdf.py  fetch_fulltext.py  make_collage.py  parse_pdf.py  read_paper.py  screen_papers.py  search.py
scripts/lib/: __init__.py  citation.py  dedupe.py  http_client.py  library.py  llm.py  schema.py  score.py  screening.py  synthesis.py  text_analysis.py  utils.py
scripts/sources/: source_arxiv.py  source_crossref.py  source_openalex.py  source_semantic_scholar.py
templates/: __init__.py  library.html.j2  reading.html.j2  report.html.j2
tests/: test_citation.py  test_dedupe.py  test_library.py  test_screening.py  test_synthesis.py  test_text_analysis.py
